# oilrad

./: .gitignore  404.html  README.md  albedo.py  heating_convergence.py  index.html  infinite_layer_solution.py  interpolated_oil_test.py  mkdocs.yml  objects.inv  optical_regime.py  otremba.py  pyproject.toml  roche.py  shortwave_heating.py  single_layer_albedo.py  single_layer_solution.py  solar_irradiance_spectrum.py  total_albedo_integrator_convergence.py  two_layer_albedo.py  two_layer_solution.py  warren.py
docs/: index.md
gulf/: black_body.py  infinite_layer.py  optics.py  single_layer.py  two_layer.py  two_stream_model.py
oilrad/: __init__.py  abstract_model.py  black_body.py  constants.py  heating_response.py  infinite_layer.py  irradiance.py  optics.py  single_layer.py  six_band.py  solve.py  spectra.py  top_surface.py  two_layer.py  two_stream_model.py
search/: search_index.json
tests/: test_integration.py
