[tool.poetry]
name = "oilrad"
version = "0.9.0"
description = "Two stream radiative transfer model for sea ice containing oil droplets."
authors = ["Joseph Fishlock <joseph.fishlock@physics.ox.ax.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
scipy = "^1.14.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
